# C2Serve

./: .gitignore  CMakeLists.txt  Doxygen.cmake  Doxygen.in  FindC2Serve.cmake  INSTALL  Install.cmake  LICENSE  System.cmake  index.html  styles.css
c2s-core/: C2SDataPullInterface.h  C2SDataPushInterface.h  C2SException.h  C2SGlobalSettings.cpp  C2SGlobalSettings.h  C2SMatching.cpp  C2SMatching.h  C2SRuntime.cpp  C2SRuntime.h  C2SServerTypeInterface.h  C2SSettings.cpp  C2SSocketAcceptHandler.cpp  C2SSocketAcceptHandler.h  C2SSocketClient.cpp  C2SSocketClient.h  C2SSocketClientConnection.cpp  C2SSocketClientConnection.h  C2SSocketConnectorWIN.cpp  C2SSocketConnectorWIN.h  C2SSocketInfo.h  C2SSocketListener.cpp  C2SSocketListener.h  C2SSocketListenerSettings.h  C2SSocketListenerThread.h  C2SSocketListenerWIN.cpp  C2SSocketListenerWIN.h  C2SStatusSetter.h  C2SStringUtils.h  CMakeLists.txt
c2s-core/test/: C2STestCore.cpp  C2STestSocketClient.h  C2STestSocketListener.cpp  C2STestSocketListener.h  C2STestSocketListenerDataHandling.cpp  C2STestSocketListenerDataHandling.h  C2STestSocketListenerDataPull.cpp  C2STestSocketListenerDataPull.h  CMakeLists.txt
c2s-example/: C2SExampleMain.cpp  C2SExampleRestMethodPrototypeSayHello.cpp  C2SExampleRestMethodPrototypeSayHello.h  CMakeLists.txt
c2s-htdocs/: Basic.css  Document.js  Menu.css  create_simple_server.html  download_and_installation.html  example_get.html  getting_started.html  important_notes.html  license.html  overview.html  server_startup.html  what_is_rest.html
c2s-http/: C2SHttpClient.cpp  C2SHttpClient.h  C2SHttpDataHandlingImpl.cpp  C2SHttpDataHandlingImpl.h  C2SHttpDataPull.cpp  C2SHttpDataPull.h  C2SHttpDefines.h  C2SHttpEntity.h  C2SHttpEntityUnstreamerBase.h  C2SHttpException.h  C2SHttpHeaderFields.cpp  C2SHttpHeaderFields.h  C2SHttpMatching.cpp  C2SHttpMediaType.cpp  C2SHttpMediaType.h  C2SHttpMediaTypeList.cpp  C2SHttpMediaTypeList.h  C2SHttpMethod.h  C2SHttpParseHeaderField.cpp  C2SHttpParseQueryFieldAndAddToList.cpp  C2SHttpParseQueryFields.cpp  C2SHttpParseResource.cpp  C2SHttpParseResponse.cpp  C2SHttpParseResponse.h  C2SHttpParseURI.cpp  C2SHttpParser.cpp  C2SHttpParser.h  C2SHttpQueryFields.cpp  C2SHttpQueryFields.h  C2SHttpRequest.cpp  C2SHttpRequest.h  C2SHttpRequestEntityUnstreamerBase.h  C2SHttpRequestHeader.cpp  C2SHttpRequestHeader.h  C2SHttpResource.cpp  C2SHttpResource.h  C2SHttpResourceManager.cpp  C2SHttpResourceManager.h  C2SHttpResourceManagerResponseHandler.cpp  C2SHttpResourcePrototype.cpp  (+13 more)
c2s-log/: C2SLogBase.cpp  C2SLogBase.h  C2SLogImplSimpleMessage.cpp  C2SLogInterface.h  C2SLogLevel.cpp  C2SLogLevel.h  C2SLogMutex.h  C2SLogPublicationImplStandardOutput.cpp  C2SLogPublicationInterface.h  C2SLogSimpleMessageFactory.cpp  C2SLogSimpleMessageFactory.h  CMakeLists.txt
c2s-log/test/: C2STestLogMain.cpp  C2STestLogPublication.cpp  C2STestLogPublication.h  CMakeLists.txt
c2s-rest/: C2SRestEntityMethodPrototype.h  C2SRestEntityStreamer.h  C2SRestException.h  C2SRestMatchMethodToRequest.cpp  C2SRestMatchMethodToRequest.h  C2SRestMethodPrototype.cpp  C2SRestMethodPrototype.h  C2SRestMethodPrototypeDELETE.h  C2SRestMethodPrototypeGET.h  C2SRestMethodPrototypePOST.h  C2SRestMethodPrototypeRequestEntity.h  C2SRestMethodPrototypeResponseEntity.h  C2SRestParameter.h  C2SRestPathParameter.cpp  C2SRestPathParameter.h  C2SRestPathSegment.cpp  C2SRestPathSegment.h  C2SRestPathSegmentList.cpp  C2SRestPathSegmentList.h  C2SRestQueryParameter.h  C2SRestQueryParameterBase.h  C2SRestResource.cpp  C2SRestResource.h  C2SRestResourceDescription.cpp  C2SRestResourceDescription.h  C2SRestResourcePrototype.cpp  C2SRestResponseEntityMethodPrototype.h  CMakeLists.txt
c2s-socket/: C2SDataHandlingInterface.h  C2SSocketAcceptHandler.cpp  C2SSocketAcceptHandler.h  C2SSocketClientConnection.cpp  C2SSocketClientConnection.h  C2SSocketClientConnectionUnix.cpp  C2SSocketClientConnectionUnix.h  C2SSocketClientConnectionWindows.cpp  C2SSocketClientConnectionWindows.h  C2SSocketClientException.h  C2SSocketConnectorWIN.cpp  C2SSocketConnectorWIN.h  C2SSocketException.h  C2SSocketListener.cpp  C2SSocketListener.h  C2SSocketListenerThread.cpp  C2SSocketListenerThread.h  C2SSocketListenerWIN.h  CMakeLists.txt
c2s-socket/test/: C2STestSocketClient.cpp  C2STestSocketClient.h  C2STestSocketListener.cpp  C2STestSocketListenerDataHandling.cpp  C2STestSocketListenerDataHandling.h  CMakeLists.txt
c2s-test/: C2STestHttpBasic.cpp  C2STestHttpRun.cpp  C2STestRest.cpp  C2STestRestEntityStreamerXML.h  C2STestRestMethodAdd.h  C2STestRestMethodQueryFields.cpp  C2STestRestMethodQueryFields.h  C2STestRestMethods.h  C2STestServerRunner.cpp  C2STestServerRunner.h  C2STestServerThread.cpp  C2STestServerThread.h  CMakeLists.txt
c2s-test/basic/: C2STestHttpBasic.cpp  CMakeLists.txt
c2s-test/rest/: C2STestRest.cpp  C2STestRestCheckMultiThreading.cpp  C2STestRestCheckMultiThreading.h  C2STestRestCheckServerResponses.cpp  C2STestRestCheckServerResponses.h  C2STestRestEntityStreamerJSON.h  C2STestRestEntityStreamerXML.h  C2STestRestEntityUnstreamerJSON.cpp  C2STestRestEntityUnstreamerXML.cpp  C2STestRestEntityUnstreamerXML.h  C2STestRestFixture.cpp  C2STestRestFixture.h  C2STestRestMethodAdd.cpp  C2STestRestMethodAdd.h  C2STestRestMethodAddDuplicate.cpp  C2STestRestMethodAddDuplicate.h  C2STestRestMethodAddDuplicatePOST.cpp  C2STestRestMethodDELETE.cpp  C2STestRestMethodInvalidEntity.cpp  C2STestRestMethodMediaTypeConverter.cpp  C2STestRestMethodMediaTypeConverter.h  C2STestRestMethodQueryFields.cpp  C2STestRestMethodQueryFields.h  C2STestRestMethodThreading.cpp  C2STestRestMethodThreading.h  C2STestRestRequest.cpp  C2STestRestRequest.h  C2STestRestRequestEntityUnstreamerXML.h  C2STestRestResponse.cpp  C2STestRestResponse.h  C2STestRestServerInitialization.cpp  CMakeLists.txt
c2s-util/: CMakeLists.txt  FileUtils.cpp  (+9 more)
c2s-util/thread/test/: C2SThreadTest.cpp  C2SThreadTestRunnable.h  C2SThreadTestTaskQueueRunnable.h  CMakeLists.txt  ThreadTest.cpp  ThreadTestRunnable.h  ThreadTestTaskQueueRunnable.h
c2s-util/thread/test/boost/: CMakeLists.txt
(+26 files in other folders)
